@@ -56,7 +56,8 @@
 - API Addition: Added List#drawSelection().
 - API Fix: getDisplayMode() is now more accurate on Android and GWT.
 - API Addition: JsonValue#iterator(String) to more easily iterate a child that may not exist.
-s
+- API Addition: Added ExtendViewport#setScaling, eg for use with Scaling.contain.
+
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
 - [BREAKING CHANGE] tvOS libraries have been removed. No migration steps required.
